--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
     <meta name="About Edona Rexhaj"  content=" About Edona Rexhaj, aspiring Front-end developer" />
-    <link rel="stylesheet" href="/CSS/styling.css" />
+    <link rel="stylesheet" href="/Advanced-tools/CSS/styling.css" />
     <title>About Edona</title>
   </head>
   <body>
@@ -36,9 +36,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="/index.html">Home</a>
-            <a class="nav-link active" href="/about.html">About me</a>
-            <a class="nav-link" href="/about.html#contact">Contact me</a>
+            <a class="nav-link" aria-current="page" href="/index.html" title="Homepage">Home</a>
+            <a class="nav-link active" href="/about.html" title="About Edona">About me</a>
+            <a class="nav-link" href="/about.html#contact" title="Contact Edona">Contact me</a>
           </div>
         </div>
       </div>
