--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <head>  
-      <meta name="Edona Rexhaj"  content="Edona Rexhaj, aspiring Front-end developer" />
+    <head>
+      <meta
+        name="Edona Rexhaj"
+        content="Edona Rexhaj, aspiring Front-end developer"
+      />
     </head>
-    <title> Front-end developer, Edona Rexhaj</title>
+    <title>Front-end developer, Edona Rexhaj</title>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -19,7 +22,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/CSS/styling.css" />
+    <link rel="stylesheet" href="/Advanced-tools/CSS/styling.css" />
   </head>
 
   <body>
@@ -39,9 +42,24 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="/about.html" title="About Edona" >About me</a>
-            <a class="nav-link" href="/about.html#contact" title="Contact Edona">Contact me</a>
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="/Advanced-tools/index.html"
+              >Home</a
+            >
+            <a
+              class="nav-link"
+              href="/Advanced-tools/about.html"
+              title="About Edona"
+              >About me</a
+            >
+            <a
+              class="nav-link"
+              href="/Advanced-tools/about.html"
+              title="Contact Edona"
+              >Contact me</a
+            >
           </div>
         </div>
       </div>
@@ -52,7 +70,9 @@
       💛💙 Junior Front-end developer, based in Sweden
     </h3>
     <div class="navigation-links margin-bigger-bottom">
-      <a href="about.html#contact" class="contact-link" title="Contact Edona">Contact me</a>
+      <a href="about.html#contact" class="contact-link" title="Contact Edona"
+        >Contact me</a
+      >
       <a href="about.html" class="about-link" title="About Edona">About me</a>
     </div>
 
@@ -73,7 +93,9 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <a href="#" class="primary-link">Launch Yoga App</a>
+          <a href="#" class="primary-link" title="Yoga app project"
+            >Launch Yoga App</a
+          >
         </div>
       </div>
       <div class="container">
@@ -86,7 +108,9 @@
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.
             </p>
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link" title="Weather app project"
+              >Launch Weather App</a
+            >
           </div>
           <div class="col-md-6">
             <img
@@ -112,7 +136,9 @@
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.
             </p>
-            <a href="#" class="primary-link">Launch Yoghurt App</a>
+            <a href="#" class="primary-link" title="Yoghurt app project"
+              >Launch Yoghurt App</a
+            >
           </div>
         </div>
       </div>
