Fixed wrong css path

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
     <meta name="About Edona Rexhaj"  content=" About Edona Rexhaj, aspiring Front-end developer" />
-    <link rel="stylesheet" href="/Advanced-tools/CSS/styling.css" />
+    <link rel="stylesheet" href="./CSS/styling.css" />
     <title>About Edona</title>
   </head>
   <body>
