--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/Advanced-tools/CSS/styling.css" />
+    <link rel="stylesheet" href="./CSS/styling.css" />
   </head>
 
   <body>
@@ -45,18 +45,18 @@
             <a
               class="nav-link active"
               aria-current="page"
-              href="/Advanced-tools/index.html"
+              href="/index.html"
               >Home</a
             >
             <a
               class="nav-link"
-              href="/Advanced-tools/about.html"
+              href="/about.html"
               title="About Edona"
               >About me</a
             >
             <a
               class="nav-link"
-              href="/Advanced-tools/about.html"
+              href="/about.html"
               title="Contact Edona"
               >Contact me</a
             >
@@ -66,7 +66,7 @@
     </nav>
     <h2 class="display-centre">👋 Hi I am</h2>
     <h1 class="display-centre">Edona Rexhaj</h1>
-    <h3 class="display-centre">
+    <h3 class="display-centre" style="margin-top: 15px;">
       💛💙 Junior Front-end developer, based in Sweden
     </h3>
     <div class="navigation-links margin-bigger-bottom">
